--- a/views/components/inactivity-alert.html
+++ b/views/components/inactivity-alert.html
@@ -3,14 +3,14 @@
         <span class="govuk-visually-hidden-focusable" id="aria-timeout-label">
             <!-- content of aria label -->
         </span>
-        <h2 class="icon-important red-inverse">{{ commonContent[htmlLang].inactivityTimeout.title | safe }}</h2>
+        <h2 class="icon-important red-inverse">{{ commonContent[htmlLang].inactivityTimeout.title }}</h2>
         <p class="govuk-body" id="expiring-in-message">
-            {{ commonContent[htmlLang].inactivityTimeout.expiringIn | safe }}
+            {{ commonContent[htmlLang].inactivityTimeout.expiringIn }}
         </p>
-        <p class="govuk-body">{{ commonContent[htmlLang].inactivityTimeout.text | safe }}</p>
+        <p class="govuk-body">{{ commonContent[htmlLang].inactivityTimeout.text }}</p>
         <p>
-            <button class="govuk-button extend" id="extend" href="#" rel="modal:close">{{ commonContent[htmlLang].inactivityTimeout.yes | safe }}</button>
-            <button class="govuk-button govuk-button--secondary abort" id="destroy" href="#">{{ commonContent[htmlLang].inactivityTimeout.no | safe }}</button>
+            <button class="govuk-button extend" id="extend" href="#" rel="modal:close">{{ commonContent[htmlLang].inactivityTimeout.yes }}</button>
+            <button class="govuk-button govuk-button--secondary abort" id="destroy" href="#">{{ commonContent[htmlLang].inactivityTimeout.no }}</button>
         </p>
     </div>
 </div>
