--- a/views/components/check-your-answers.njk
+++ b/views/components/check-your-answers.njk
@@ -2,7 +2,7 @@
   <dl class="govuk-summary-list">
     <div class="govuk-summary-list__row" id="cya-{{ safeId(id, question) }}">
       <dt class="govuk-summary-list__key">
-        {{ question | safe }}
+        {{ question }}
       </dt>
       <dd class="govuk-summary-list__value">
         {% if caller %}
@@ -21,7 +21,7 @@
       </dd>
       <dd class="govuk-summary-list__actions">
         <a class="govuk-link" href="{{ url }}">
-          {{ commonContent.change | safe }} <span class="govuk-visually-hidden">{{ question | safe }}</span>
+          {{ commonContent.change }} <span class="govuk-visually-hidden">{{ question }}</span>
         </a>
       </dd>
     </div>
