reinstate safe filter as content contains html

--- a/views/layouts/check_your_answers.html
+++ b/views/layouts/check_your_answers.html
@@ -45,7 +45,7 @@
       {% for part in section.completedAnswers %}
         {% if not part.hide %}
           {% if part.html %}
-            {{ part.html }}
+            {{ part.html | safe }}
           {% else %}
             {{ answer(part.question, part.answer, part.url, part.id, commonContent[htmlLang]) }}
           {% endif %}
