--- a/assets/scss/h-progress-bar.scss
+++ b/assets/scss/h-progress-bar.scss
@@ -30,7 +30,6 @@ $ring-border: 6px;
     .appeal-received,
     .dwp-respond,
     .ibca-respond,
-    .ibca-decision,
     .hearing-booked,
     .hearing {
       display: inline-block;
@@ -92,19 +91,12 @@ $ring-border: 6px;
       right: -22%;
     }
 
-    .hearing h4,
-    .ibca-decision h4 {
+    .hearing h4 {
       right: -3%;
     }
 
-    .ibca-respond,
-    .ibca-decision {
-        width: calc((100% - #{$ring-diameter} - #{$ring-border} ) / 2);
-        margin-left: -7px;
-        margin-right: -1px;
-  }
-
     .dwp-respond,
+    .ibca-respond,
     .hearing-booked,
     .hearing {
       width: calc((100% - #{$ring-diameter} - #{$ring-border} ) / 3);
