--- a/assets/scss/h-progress-bar.scss
+++ b/assets/scss/h-progress-bar.scss
@@ -91,17 +91,9 @@ $ring-border: 6px;
       right: -22%;
     }
 
-    .hearing h4,
-    .ibca-decision h4 {
+    .hearing h4 {
       right: -3%;
     }
-
-    .ibca-respond,
-    .ibca-decision {
-        width: calc((100% - #{$ring-diameter} - #{$ring-border} ) / 2);
-        margin-left: -7px;
-        margin-right: -1px;
-  }
 
     .dwp-respond,
     .ibca-respond,
