SSCSCI-1483 toggling Welsh toggle off for IBC

--- a/views/components/phase_banner.njk
+++ b/views/components/phase_banner.njk
@@ -17,7 +17,7 @@
         {% set html %}
             {{ content.phaseBar.feedback | replace('{{smartSurveyFeedbackUrl}}', urlPath) | safe }}
 
-            {% if featureToggles.welsh() == "true" %}
+            {% if featureToggles.welsh() == "true" and not isIba %}
                 {{ content.phaseBar.languageToggle | safe }}
             {% endif %}
         {% endset %}
