Fising sonarcloud issue of missing title

--- a/views/components/globals.html
+++ b/views/components/globals.html
@@ -53,7 +53,7 @@
 {% block bodyStart %}
     {% if isIba %}
         <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src=https://www.googletagmanager.com/ns.html?id=GTM-KZ33DQ42 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <noscript><iframe src=https://www.googletagmanager.com/ns.html?id=GTM-KZ33DQ42 title="GTM" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- End Google Tag Manager (noscript) -->
     {% else %}
         <!-- Google Tag Manager (noscript) -->
